fixed mobile whitespace problem down right side of site

--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-
+html, body {
+  width: 100%;
+  /* height: 100%; */
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 /* ===================Head of Page======================== */
 .title {
     text-align: center;
